@@ -7,6 +7,7 @@ Selenium 2 Beta 4
 * Deprecated get_current_window_handle. Use current_window_handle property
 * Deprecated get_window_handles. Use window_handles property
 * Ability to install extensions into profiles
+* Added Location to the WebElement
 
 Selenium 2 Beta 2
 
